--- a/tours.html
+++ b/tours.html
@@ -53,7 +53,7 @@
             <h5>with Lauren Daigle</h5>
           </div>
           <div class="tour-info">
-            <h2>Fort Wayne, IN</h2>
+            <h3>Fort Wayne, IN</h3>
           </div>
           <div class="tour-info">
             <h2>Buy Ticket!</h2>
@@ -66,7 +66,7 @@
             <h5>with Lauren Daigle</h5>
           </div>
           <div class="tour-info">
-            <h2>Evansville, MO</h2>
+            <h3>Evansville, IN</h3>
           </div>
           <div class="tour-info">
             <h2>Buy Ticket!</h2>
@@ -79,7 +79,7 @@
             <h5>with Lauren Daigle</h5>
           </div>
           <div class="tour-info">
-            <h2>Kansas City, MO</h2>
+            <h3>Kansas City, MO</h3>
           </div>
           <div class="tour-info">
             <h2>Buy Ticket!</h2>
