--- a/tours.html
+++ b/tours.html
@@ -56,7 +56,9 @@
             <h3>Fort Wayne, IN</h3>
           </div>
           <div class="tour-info">
-            <h2>Buy Ticket!</h2>
+            <div class="button">
+              <a href="https://www.ticketmaster.com/event/0500572BA20C4012?irgwc=1&clickid=Wv5XZhxFZxyITjRw6MUTtS8CUkBQMJTjEydkT80&camefrom=CFC_BUYAT_1387536&impradid=1387536&REFERRAL_ID=tmfeedbuyat1387536&wt.mc_id=aff_BUYAT_1387536&utm_source=1387536-Seated&impradname=Seated&utm_medium=affiliate" target="_blank"> <h2>Buy Ticket!</h2> </a>
+            </div>
           </div>
         </div>
         <div class="sep24">
@@ -69,7 +71,9 @@
             <h3>Evansville, IN</h3>
           </div>
           <div class="tour-info">
-            <h2>Buy Ticket!</h2>
+            <div class="button">
+              <a href="https://www.ticketmaster.com/event/05005729A879366C?irgwc=1&clickid=Wv5XZhxFZxyITjRw6MUTtS8CUkBQMOxrEydkT80&camefrom=CFC_BUYAT_1387536&impradid=1387536&REFERRAL_ID=tmfeedbuyat1387536&wt.mc_id=aff_BUYAT_1387536&utm_source=1387536-Seated&impradname=Seated&utm_medium=affiliate" target="_blank"> <h2>Buy Ticket!</h2> </a>
+            </div>
           </div>
         </div>
         <div class="sep24">
@@ -82,7 +86,9 @@
             <h3>Kansas City, MO</h3>
           </div>
           <div class="tour-info">
-            <h2>Buy Ticket!</h2>
+            <div class="button">
+              <a href="https://www.axs.com/events/382639/lauren-daigle-tickets?skin=sprintcenter" target="_blank"> <h2>Buy Ticket!</h2> </a>
+            </div>
           </div>
         </div>
       </div>
