--- a/video.html
+++ b/video.html
@@ -49,6 +49,9 @@
         <div class="video1">
           <iframe width="768" height="432" src="https://www.youtube.com/embed/KMgh0VSD_0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="video1">
+          <iframe width="770" height="433" src="https://www.youtube.com/embed/8dSYBxEJ7ns" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </body>
